Updated Rocco docs.

--- a/index.html
+++ b/index.html
@@ -1444,7 +1444,7 @@ be executed when running the mungepiece on a training dataset to
 later feed to a machine learning classifier (i.e., the train function)
 in conjunction with the code that executes on streaming records
 coming through in a production system performing the same
-mathematical operation on the 1-row dataset (i.e., the predict function).</p>
+mathematical operation on a 1-row dataset (i.e., the predict function).</p>
 
 <p>Next, we must determine the training and prediction arguments to the
 mungebit that specify the difference in how to use the mungebit on
@@ -1492,42 +1492,41 @@ mungebit + mungepiece combo. Using this syntax in conjunction with the
 <code>munge</code> helper function speeds up coding of munge procedures (lists of
 mungepieces) and increases the readability of munging code.</p>
 
-<pre><code class="r">The munge function calls out to the parse_mungepiece helper.
-munge(dataset, list(
+<pre><code class="r"># The munge function calls out to the parse_mungepiece helper.
+munged_data &lt;- munge(raw_data, list(
   &quot;Drop useless vars&quot; = list(list(drop_vars, vector_of_variables),
                              list(drop_vars, c(vector_variables, &quot;dep_var&quot;))),
   &quot;Impute variables&quot;  = list(imputer, imputed_vars),
   &quot;Discretize vars&quot;   = list(list(discretize, restore_levels), discretized_vars)
 ))
-``
-
-Translated in English, we are saying:
-
-  1. Drop a static list of useless variables from the data set.
-     When the model is trained, drop the dependent variable as well
-     since we will no longer need it.
-
-  2. Impute the variables in the static list of `imputed_vars`.
-     When the model is trained, the `imputer` will have some logic
-     to restore the means obtained during training of the mungepiece.
-
-  3. Discretize the static list of variables in the `discretized_vars`
-     character vector. After model training, when new data points come in,
-     the original training set is no longer available. The `discretize`
-     method stored the necessary cuts for each variable in the mungebit&#39;s
-     `input`, which the `restore_levels` function uses to bin the
-     numerical features in the list of `discretized_vars` into factor
-     (categorical) variables.
-
-If one took an initial (training) data set, ran it through the
-`munge` helper as above, took the resulting list of mungepieces,
-and ran the original data set through them a second time (so they
-are running in &quot;predict mode&quot;), we should obtain the same result.
-
-We can use the list of trained mungepieces to replicate the munging
-on the training set in a production system on single row data sets
-(i.e., new records being streamed in real-time).
 </code></pre>
+
+<p>Translated in English, we are saying:</p>
+
+<ol>
+<li><p>Drop a static list of useless variables from the data set.
+ When the model is trained, drop the dependent variable as well
+ since we will no longer need it.</p></li>
+<li><p>Impute the variables in the static list of <code>imputed_vars</code>.
+ When the model is trained, the <code>imputer</code> will have some logic
+ to restore the means obtained during training of the mungepiece.</p></li>
+<li><p>Discretize the static list of variables in the <code>discretized_vars</code>
+ character vector. After model training, when new data points come in,
+ the original training set is no longer available. The <code>discretize</code>
+ method stored the necessary cuts for each variable in the mungebit&#39;s
+ <code>input</code>, which the <code>restore_levels</code> function uses to bin the
+ numerical features in the list of <code>discretized_vars</code> into factor
+ (categorical) variables.</p></li>
+</ol>
+
+<p>If one took an initial (training) data set, ran it through the
+<code>munge</code> helper as above, took the resulting list of mungepieces,
+and ran the original data set through them a second time (so they
+are running in &ldquo;predict mode&rdquo;), we should obtain the same result.</p>
+
+<p>We can use the list of trained mungepieces to replicate the munging
+on the training set in a production system on single row data sets
+(i.e., new records being streamed in real-time).</p>
 
           </div>
 
