Updated Rocco docs.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ data.frame fall in three categories:</p>
  a transposition or multiple imputation.</li>
 </ol>
 
-<p>The <code>column_transformation</code> function is a helper that tak 
+<p>The <code>column_transformation</code> function is a helper that takes
 a function with at least one argument&ndash;the atomic vector (column)
 being operated on, with additional arguments acting as further
 parametrization&ndash;and turns that function into a function suitable
